--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME=taller_final
-DB_USER=root
-DB_PASSWORD=ameri2327
-DB_HOST=localhost
-DB_PORT=3306
-JWT_SECRET=gfbj4u5gdfvd87v8d7vdfvdfvhb8tuvidfvb_isdvh834bv
-PORT=3030
+DB_NAME="railway"
+DB_USER="root"
+DB_PASSWORD="VVoEuFwOyyEFqrIYKjleSlyXviCEWLRI"
+DB_HOST="switchback.proxy.rlwy.net"
+DB_PORT="31801"
+JWT_SECRET="gfbj4u5gdfvd87v8d7vdfvdfvhb8tuvidfvb_isdvh834bv"
+PORT="3000"
